<resources>
    <string name="app_name">jkmadro-EmotiLog</string>
    <string name="title_nav1">Home</string>
    <string name="title_nav2">Summary</string>
    <string name="title_nav3">Log</string>
    <string name="feeling_prompt">How are you feeling?</string>
    <string name="emotion_log">Emotion Log</string>
    <string name="no_emotions_logged_yet">No emotions logged yet</string>
    <string name="clear_logs">Clear Logs</string>
</resources>