<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.jkmadro_emotilog.ui.home.HomeFragment"
        android:label="@string/title_nav1"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.jkmadro_emotilog.ui.summary.SummaryFragment"
        android:label="@string/title_nav2"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.jkmadro_emotilog.ui.logs.LogsFragment"
        android:label="@string/title_nav3"
        tools:layout="@layout/fragment_logs" />
</navigation>